<resources>
    <string name="app_name">Cidadão Ijuense</string>

    <!-- Título da Activity Principal -->
    <string name="text_cidadao">Cidadão</string>
    <string name="text_ijuiense">Ijuiense</string>

    <!-- Textos do Layout -->
    <string name="text_selecione_a">Selecione a</string>
    <string name="text_categoria">Categoria</string>
    <string name="text_bem_vindo">Seja bem vindo!</string>
    <string name="text_plataforma">Plataforma de Gestão Pública Colaborativa</string>
    <string name="text_endereco_ocorrencia_1">QUAL O</string>
    <string name="text_endereco_ocorrencia_2">ENDEREÇO</string>
    <string name="text_endereco_ocorrencia_3">DA OCORRÊNCIA?</string>
    <string name="text_descricao_ocorrencia_1">CONTE-NOS O</string>
    <string name="text_descricao_ocorrencia_2">PROBLEMA</string>
    <string name="text_submeter_ocorrencia_1">SUBMETER</string>
    <string name="text_submeter_ocorrencia_2">OCORRÊNCIA</string>
    <string name="text_enviando_protocolo">ENVIANDO PROTOCOLO</string>
    <string name="text_protocolo_enviado">PROTOCOLO ENVIADO</string>
    <string name="text_orientacao_protocolo_feedback">Você receberá novidades sobre o andamento da solicitação em seu e-mail.</string>
    <string name="text_orientacao_protocolo_sem_feedback">Você optou por não receber feedback sobre esta solicitação.</string>
    <string name="text_anexar_imagem_1">ANEXAR</string>
    <string name="text_anexar_imagem_2">IMAGEM</string>

    <!-- Título de Ocorrências-->
    <string name="ocor_tit_sinalizacao_e_placas">Sinalização e Placas</string>
    <string name="ocor_tit_denuncias_ou_reclamacoes">Denúncias ou Reclamações</string>
    <string name="ocor_tit_limpeza_urbana">Limpeza Urbana</string>
    <string name="ocor_tit_vias_publicas_e_transito">Vias Públicas ou Trânsito</string>
    <string name="ocor_tit_iluminacao_publica">Iluminação Pública</string>

    <!-- Ações -->
    <string name="action_selecionar_local">Selecionar no mapa</string>
    <string name="action_nao_informar_local">Não informar</string>
    <string name="action_avancar">Avançar</string>
    <string name="action_nova_solicitacao">Nova solicitação</string>
    <string name="action_sair">Sair</string>
    <string name="action_sim">Sim</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_camera">Câmera</string>
    <string name="action_galeria">Galeria</string>
    <string name="action_submeter">Submeter</string>
    <string name="action_nao_anexar_imagem">Não anexar</string>
    <string name="cb_receber_feedback">Desejo receber feedback sobre esta solicitação</string>
    <string name="cb_ocorrencia_anonima">Prefiro não me identificar</string>

    <!-- Toasts -->
    <string name="toast_selecione_local">Mudou de ideia? Clique no botão \'NÃO INFORMAR\'</string>
    <string name="toast_preencha_corretamente">Preencha os campos corretamente</string>

    <!-- Hint de Edits -->
    <string name="hint_titulo_ocorrencia">TÍTULO DA OCORRÊNCIA</string>
    <string name="hint_descricao_ocorrencia">DESCRIÇÃO DA OCORRÊNCIA</string>
    <string name="hint_nome_usuario">SEU NOME</string>
    <string name="hint_email_usuario">SEU EMAIL</string>
    <string name="hint_telefone_usuario">SEU TELEFONE</string>

    <!-- Diálogos -->
    <string name="dialog_tit_confirmacao_anonimo">Você tem certeza?</string>
    <string name="dialog_mes_confirmacao_anonimo">Desta forma não será possível acompanhar o andamento da sua solicitação.</string>

    <!-- Erros -->
    <string name="error_permission_camera">Precisamos acessar a câmera para tirar fotos :)</string>
</resources>