<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:colortextview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.mathiasberwig.cidadao_ijuense.presentation.fragment.SubmeterOcorrenciaFragment">

    <!-- Submeter ocorrência? -->
    <loic.teillard.colortextview.ColorTextView
        android:id="@+id/tv_submeter_ocorrencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        colortextview:clt_color1="@android:color/white"
        colortextview:clt_color2="@color/colorAccent"
        colortextview:clt_spaces="true"
        colortextview:clt_txt1="@string/text_submeter_ocorrencia_1"
        colortextview:clt_txt2="@string/text_submeter_ocorrencia_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_submeter_ocorrencia"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <!-- SEU NOME -->
        <EditText
            android:id="@+id/input_nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_nome_usuario"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLines="1"
            android:padding="12dp" />

        <!-- SEU E-MAIL -->
        <EditText
            android:id="@+id/input_email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_email_usuario"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:padding="12dp" />

        <!-- SEU TELEFONE -->
        <EditText
            android:id="@+id/input_telefone_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_telefone_usuario"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:padding="12dp" />

        <!-- Não me identificar -->
        <CheckBox
            android:id="@+id/cb_ocorrencia_anonima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_ocorrencia_anonima" />

        <!-- Feedback -->
        <CheckBox
            android:id="@+id/cb_receber_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_receber_feedback" />
    </LinearLayout>

</RelativeLayout>
